--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       gtag('config', 'UA-127064066-1');
     </script>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
